production-eks-blueprint/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cafe-lumiere
  labels:
    app.kubernetes.io/part-of: cafe-lumiere
